--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Jinja2==2.11.3
 MarkupSafe==1.1.1
 Pillow==8.1.0
 pycparser==2.20
+python-dotenv==0.15.0
 six==1.15.0
 SQLAlchemy==1.3.23
 Werkzeug==1.0.1
